--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 100%; 
+    width: 100%;
     height: 1200px;
     min-height: 100%;
 }
@@ -36,3 +36,33 @@ html, body {
 .ngGrid.unselectable {
   margin-top: 10px;
 }
+
+#dropbtn {
+
+}
+.dropdown{
+  float: right;
+  margin-left: 10px;
+  position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    border-width: 2px;
+    border-color: black;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #2D6CA2}
+
+.show {display:block;}
